--- a/src/styles/QuestionForm.css
+++ b/src/styles/QuestionForm.css
@@ -60,6 +60,7 @@
 
 form {
   padding: 1.5rem 2rem;
+  width: 100%;
 }
 
 .form-group {
